<resources>
    <string name="app_name">Timer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Add">Add</string>
    <string name="Color">Color</string>
    <string name="popup1">Edit</string>
    <string name="popup2">Delete</string>
    <string name="Title">Title</string>
    <string name="Ready">Preparation</string>
    <string name="Work">Working</string>
    <string name="Relax">Relax</string>
    <string name="Cycles">Cycles</string>
    <string name="Sets">Sets</string>
    <string name="SetsRelax">Rest between sets</string>
    <string name="Finish">Finish</string>
    <string name="ClearData">Clear data</string>
    <string name="Font">Font size</string>
    <string name="Theme">Theme (light/dark)</string>
    <string name="Design">Design</string>
    <string name="Delete">Deleting</string>
    <string name="MsgTitle">Leaving</string>
    <string name="Msg">Do you really want to finish training?</string>
    <string name="MsgBtnPos">Yes</string>
    <string name="MsgBtnNeg">No</string>
    <string name="Settings">Settings</string>

</resources>